# The-Youth-Hub

./: .env  .env.example  .gitignore  README.md  about.html  contact.html  index.html  login.html  main.js  pyproject.toml  signup.html  styles.css  users.db
backend/app/: database.py  deps.py  main.py  models.py  schemas.py  security.py
backend/app/routes/: auth.py  profile.py  users.py
frontend/: about.html  admin-dashboard.html  admin.js  contact.html  dashboard.html  index.html  login.html  main.js  profile.html  script.js  signup.html  songs.html  styles.css
frontend/css/: profile.css  songs.css
